--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="assets/logos/lency-logo.svg" alt="Lency Logo">
+                <a href="#hero" aria-label="Scroll to top">
+                    <img src="assets/logos/lency-logo.svg" alt="Lency Logo">
+                </a>
             </div>
             <ul class="nav-links">
                 <li><a href="#problem" class="nav-link">Problem</a></li>
