--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     
                     <div class="hero-stat">
                         <div class="stat-line" data-value="57">0%</div>
-                        <p>of calves die within 24 hours if calving complications are missed.</p>
+                        <p>of calves die within 24 hours if complications are not addressed on time. We are building <b>CalvAlert</b> to change that.</p>
                     </div>
                     
                     <div class="cta-group">
