--- a/index.html
+++ b/index.html
@@ -464,7 +464,9 @@
                                 <div class="cow-monitor">
                                     <div class="cow cow-1"></div>
                                     <div class="cow cow-2"></div>
-                                    <div class="cow cow-3"></div>
+                                    <div class="cow cow-3">
+                                        <div class="detection-dot"></div>
+                                    </div>
                                 </div>
                                 <div class="camera-controls">
                                     <span class="camera-dot"></span>
@@ -494,11 +496,11 @@
                                     </div>
                                     <div class="alert-row">
                                         <div class="alert-label">Detected:</div>
-                                        <div class="alert-value">11:03:54 PM</div>
+                                        <div class="alert-value current-time">--:--:-- --</div>
                                     </div>
-                                </div>
-                                <div class="alert-message">
-                                    Immediate attention recommended. Please check on the animal promptly to ensure proper care.
+                                    <div class="alert-message">
+                                        Immediate attention recommended. Please check on the animal promptly to ensure proper care.
+                                    </div>
                                 </div>
                                 <div class="alert-actions">
                                     <button class="alert-btn dismiss">Dismiss</button>
