--- a/index.html
+++ b/index.html
@@ -863,13 +863,10 @@
                 </div>
                 
                 <div class="footer-social">
-                    <a href="https://linkedin.com/" target="_blank" class="social-icon">
+                    <a href="https://www.linkedin.com/company/lency" target="_blank" class="social-icon">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://twitter.com/" target="_blank" class="social-icon">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="mailto:info@lency.com" class="social-icon">
+                    <a href="mailto:talk.lency@gmail.com" class="social-icon">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
