--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <div class="logo">
                 <a href="#hero" aria-label="Scroll to top">
-                    <img src="assets/logos/lency-logo.svg" alt="Lency Logo">
+                    <img src="assets/logos/lency-logo.png" alt="Lency Logo">
                 </a>
             </div>
             <ul class="nav-links">
