--- a/index.html
+++ b/index.html
@@ -603,29 +603,7 @@
                 </div>
                 
                 <!-- Partnerships Showcase -->
-                <div class="partnerships-showcase fade-in">
-                    <div class="partnership-journey">
-                        <div class="journey-path">
-                            <div class="journey-line"></div>
-                            <div class="journey-milestone active" data-milestone="incubator">
-                                <div class="milestone-dot"></div>
-                                <div class="milestone-label">Incubator</div>
-                            </div>
-                            <div class="journey-milestone" data-milestone="grants">
-                                <div class="milestone-dot"></div>
-                                <div class="milestone-label">Initial Grants</div>
-                            </div>
-                            <div class="journey-milestone future" data-milestone="seed">
-                                <div class="milestone-dot"></div>
-                                <div class="milestone-label">Seed Funding</div>
-                            </div>
-                            <div class="journey-milestone future" data-milestone="series-a">
-                                <div class="milestone-dot"></div>
-                                <div class="milestone-label">Series A</div>
-                            </div>
-                        </div>
-                    </div>
-                    
+                <div class="partnerships-showcase fade-in">                    
                     <div class="partnership-details">
                         <!-- Incubator Card -->
                         <div class="partnership-card active" data-card="incubator">
@@ -801,7 +779,7 @@
                             <i class="fas fa-handshake"></i>
                         </div>
                         <div class="banner-text">
-                            <h3>Interested in partnering with CalvAlert?</h3>
+                            <h3>Interested in partnering for CalvAlert?</h3>
                             <p>We're looking for strategic partners to help us revolutionize livestock monitoring.</p>
                         </div>
                         <a href="#signup" class="banner-btn">Contact Us</a>
