--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lency CalvAlert - AI-powered calving detection system that saves lives and reduces costs for farmers">
     <link rel="icon" href="assets/logos/lency favicon.svg" type="image/svg+xml">
-    <title>Lency CalvAlert - Revolutionizing Livestock Monitoring</title>
+    <title>Lency x CalvAlert - Revolutionizing Livestock Monitoring</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
