--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -1083,7 +1083,7 @@
                     <a href="https://www.linkedin.com/company/lency" target="_blank" class="social-icon">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="mailto:talk.lency@gmail.com" class="social-icon">
+                    <a href="mailto:info@withlency.com" class="social-icon">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
