--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -4,14 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lency CalvAlert - AI-powered calving detection system that saves lives and reduces costs for farmers">
+    <meta name="keywords" content="lency, calvalert, calving detection, livestock monitoring, dairy farm technology, cattle monitoring system, calving alerts, prevent calf mortality, farm automation, smart farming, precision livestock farming, calving complications">
+    <meta name="author" content="Lency">
     <link rel="icon" href="assets/logos/lency favicon.svg" type="image/svg+xml">
-    <title>Lency x CalvAlert - Revolutionizing Livestock Monitoring</title>
+    <title>Lency x CalvAlert - Transforming Livestock Monitoring</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
+
+    <!-- Open Graph tags for social media sharing -->
+    <meta property="og:title" content="CalvAlert - AI-Powered Livestock Monitoring Solution">
+    <meta property="og:description" content="24/7 calving detection system that saves lives and reduces costs for farmers through non-invasive AI monitoring.">
+    <meta property="og:image" content="https://withlency.com/calvalert/assets/logos/CalvAlert-by-Lency.svg">
+    <meta property="og:url" content="https://withlency.com/calvalert/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Lency">
+
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CalvAlert - AI-Powered Livestock Monitoring">
+    <meta name="twitter:description" content="Save lives and reduce costs with 24/7 AI calving detection for farmers.">
+    <meta name="twitter:image" content="https://withlency.com/calvalert/assets/logos/CalvAlert-by-Lency.svg">
+
+    <link rel="canonical" href="https://withlency.com/calvalert/">
+
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "CalvAlert",
+    "description": "AI-powered calving detection system that monitors livestock 24/7, prevents calf mortality, and reduces labor costs for farmers.",
+    "brand": {
+        "@type": "Brand",
+        "name": "Lency"
+    },
+    "offers": {
+        "@type": "Offer",
+        "availability": "https://schema.org/PreOrder",
+        "priceSpecification": {
+        "@type": "PriceSpecification",
+        "priceCurrency": "EUR"
+        }
+    },
+    "category": "Agricultural Technology",
+    "audience": {
+        "@type": "Audience",
+        "audienceType": "Dairy Farmers, Livestock Farmers"
+    }
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Lency",
+    "url": "https://withlency.com",
+    "logo": "https://withlency.com/calvalert/assets/logos/lency-logo.png",
+    "sameAs": [
+        "https://www.linkedin.com/company/lency"
+    ]
+    }
+    </script>
 </head>
 <body>
     <div class="cursor"></div>
@@ -78,7 +135,7 @@
                 
                 <div class="hero-visual">
                     <div class="logo-container">
-                        <img src="assets/logos/CalvAlert-by-Lency.svg" alt="CalvAlert by Lency" class="calvalert-logo">
+                        <img src="assets/logos/CalvAlert-by-Lency.svg" alt="CalvAlert by Lency AI-powered calving detection system logo" title="CalvAlert livestock monitoring solution">
                     </div>
                 </div>
             </div>
