adjusted thanks.html

--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -1048,7 +1048,7 @@
                             <input type="hidden" name="_captcha" value="false">
                             
                             <!-- Redirect after submission -->
-                            <input type="hidden" name="_next" value="https://withlency.com/calvalert/thanks.html">
+                            <input type="hidden" name="_next" value="https://withlency.com/calvalert/thanks">
                             
                             <!-- Custom subject line -->
                             <input type="hidden" name="_subject" value="New CalvAlert Inquiry">
