--- a/calvalert/thanks.html
+++ b/calvalert/thanks.html
@@ -14,9 +14,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html" aria-label="Back to home">
-                    <img src="assets/logos/lency-logo.png" alt="Lency Logo">
-                </a>
+                <a href="./" aria-label="Back to home">
             </div>
         </nav>
     </header>
@@ -30,9 +28,7 @@
                     </div>
                     <h2>Thank You!</h2>
                     <p>We've received your request and will be in touch soon with updates about CalvAlert.</p>
-                    <a href="index.html" class="btn primary-btn" style="margin-top: 2rem;">
-                        <span>Back to Homepage</span>
-                    </a>
+                    <a href="./" class="btn primary-btn" style="margin-top: 2rem;">
                 </div>
             </div>
         </section>
