--- a/calvalert/thanks.html
+++ b/calvalert/thanks.html
@@ -14,7 +14,9 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="./" aria-label="Back to home">
+                <a href="index.html" aria-label="Back to home">
+                    <img src="assets/logos/lency-logo.png" alt="Lency Logo">
+                </a>
             </div>
         </nav>
     </header>
@@ -28,7 +30,9 @@
                     </div>
                     <h2>Thank You!</h2>
                     <p>We've received your request and will be in touch soon with updates about CalvAlert.</p>
-                    <a href="./" class="btn primary-btn" style="margin-top: 2rem;">
+                    <a href="index" class="btn primary-btn" style="margin-top: 2rem;">
+                        <span>Back to Homepage</span>
+                    </a>
                 </div>
             </div>
         </section>
