--- a/calvalert/thanks.html
+++ b/calvalert/thanks.html
@@ -11,10 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="cursor"></div>
+    <div class="cursor-follower"></div>
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html" aria-label="Back to home">
+                <a href="/calvalert/" aria-label="Back to home">
                     <img src="assets/logos/lency-logo.png" alt="Lency Logo">
                 </a>
             </div>
@@ -30,7 +32,7 @@
                     </div>
                     <h2>Thank You!</h2>
                     <p>We've received your request and will be in touch soon with updates about CalvAlert.</p>
-                    <a href="index" class="btn primary-btn" style="margin-top: 2rem;">
+                    <a href="/calvalert/" class="btn primary-btn" style="margin-top: 2rem;">
                         <span>Back to Homepage</span>
                     </a>
                 </div>
@@ -45,5 +47,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
