bug fixes for mobile view

--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="Lency CalvAlert - AI-powered calving detection system that saves lives and reduces costs for farmers">
     <meta name="keywords" content="lency, calvalert, calving detection, livestock monitoring, dairy farm technology, cattle monitoring system, calving alerts, prevent calf mortality, farm automation, smart farming, precision livestock farming, calving complications">
     <meta name="author" content="Lency">
