--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -135,7 +135,7 @@
                 
                 <div class="hero-visual">
                     <div class="logo-container">
-                        <img src="assets/logos/CalvAlert-by-Lency.svg" alt="CalvAlert by Lency AI-powered calving detection system logo" title="CalvAlert livestock monitoring solution">
+                        <img src="assets/logos/CalvAlert-by-Lency.svg" alt="CalvAlert by Lency AI-powered calving detection system logo">
                     </div>
                 </div>
             </div>
