logo pic update

--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -18,7 +18,7 @@
     <!-- Open Graph tags for social media sharing -->
     <meta property="og:title" content="CalvAlert - AI-Powered Livestock Monitoring Solution">
     <meta property="og:description" content="24/7 calving detection system that saves lives and reduces costs for farmers through non-invasive AI monitoring.">
-    <meta property="og:image" content="https://withlency.com/calvalert/assets/logos/CalvAlert-by-Lency.svg">
+    <meta property="og:image" content="https://withlency.com/calvalert/assets/logos/CalvAlert-by-Lency-w.png">
     <meta property="og:url" content="https://withlency.com/calvalert/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Lency">
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="CalvAlert - AI-Powered Livestock Monitoring">
     <meta name="twitter:description" content="Save lives and reduce costs with 24/7 AI calving detection for farmers.">
-    <meta name="twitter:image" content="https://withlency.com/calvalert/assets/logos/CalvAlert-by-Lency.svg">
+    <meta name="twitter:image" content="https://withlency.com/calvalert/assets/logos/CalvAlert-by-Lency-w.png">
 
     <link rel="canonical" href="https://withlency.com/calvalert/">
 
@@ -132,7 +132,7 @@
                 
                 <div class="hero-visual">
                     <div class="logo-container">
-                        <img src="assets/logos/CalvAlert-by-Lency.svg" alt="CalvAlert by Lency AI-powered calving detection system logo">
+                        <img src="assets/logos/CalvAlert-by-Lency.png" alt="CalvAlert by Lency AI-powered calving detection system logo">
                     </div>
                 </div>
             </div>
