--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -857,11 +857,11 @@
                                     </div>
                                     <div class="accordion-content">
                                         <ul class="values-list">
-                                            <li><strong>Purpose-Driven Innovation</strong> - Solving real challenges that farmers face every day</li>
-                                            <li><strong>Accessibility and Scalability</strong> - AI for all farms, not just the biggest</li>
-                                            <li><strong>Sustainability at the Core</strong> - Supporting eco-friendly farming practices</li>
-                                            <li><strong>Collaboration for Long-Term Impact</strong> - Building strong partnerships</li>
-                                            <li><strong>Relentless Improvement</strong> - Continuously refining our solutions</li>
+                                            <li><strong>Purpose-Driven Innovation:</strong> Solving real challenges that farmers face every day</li>
+                                            <li><strong>Accessibility and Scalability:</strong> AI for all farms, not just the biggest</li>
+                                            <li><strong>Sustainability at the Core:</strong> Supporting eco-friendly farming practices</li>
+                                            <li><strong>Collaboration for Long-Term Impact:</strong> Building strong partnerships</li>
+                                            <li><strong>Relentless Improvement:</strong> Continuously refining our solutions</li>
                                         </ul>
                                     </div>
                                 </div>
