--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -1101,7 +1101,7 @@
         <div class="container">
             <div class="footer-top">
                 <div class="footer-logo">
-                    <img src="assets/logos/lency-logo.svg" alt="Lency Logo">
+                    <img src="assets/logos/lency-logo.png" alt="Lency Logo">
                 </div>
                 
                 <div class="footer-links">
