Updated logo image

--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -822,11 +822,11 @@
                     <!-- Company Info Column -->
                     <div class="company-column">
                         <div class="company-logo">
-                            <img src="assets/logos/lency-logo.svg" alt="Lency Logo">
+                            <img src="assets/logos/lency-logo.png" alt="Lency Logo">
                         </div>
                         
                         <div class="company-intro">
-                            <h3>The Lency Team</h3>
+                            <h3>Team Lency</h3>
                             <p class="product-intro">CalvAlert is our first product in a series of innovative solutions designed to revolutionize agriculture with AI.</p>
                             
                             <div class="mission-accordion">
