removed company logo

--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -821,9 +821,9 @@
                 <div class="team-container fade-in">
                     <!-- Company Info Column -->
                     <div class="company-column">
-                        <div class="company-logo">
+                        <!-- <div class="company-logo">
                             <img src="assets/logos/lency-logo.png" alt="Lency Logo">
-                        </div>
+                        </div> -->
                         
                         <div class="company-intro">
                             <h3>Team Lency</h3>
