--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -116,7 +116,7 @@
                     
                     <div class="hero-stat">
                         <div class="stat-line" data-value="57">0%</div>
-                        <p>of calves die within 24 hours if complications are not addressed on time. We are building <b>CalvAlert</b> to change that.</p>
+                        <p>of calf deaths are caused by complications not being addressed on time. We are building <b>CalvAlert</b> to change that.</p>
                     </div>
                     
                     <div class="cta-group">
@@ -169,7 +169,7 @@
                                     </div>
                                 </div>
                                 <div class="stats-card-back">
-                                    <p>of calves die within 24 hours if calving complications are missed or not addressed on time</p>
+                                    <p>of calf deaths are caused by calving complications not being addressed on time</p>
                                 </div>
                             </div>
                         </div>
