Updated partnership sections

--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -634,7 +634,7 @@
                                 <div class="card-header">
                                     <div class="card-status">
                                         <span class="status-indicator active"></span>
-                                        <span class="status-text">Active Partnership</span>
+                                        <span class="status-text">Successful Partnership</span>
                                     </div>
                                     <h3>UtrechtInc Incubator</h3>
                                 </div>
@@ -672,7 +672,7 @@
                                             <span>Innovation Support</span>
                                         </div>
                                     </div>
-                                    <p>We're proud to be part of the UtrechtInc incubator program, which provides invaluable resources, mentorship, and connections to help CalvAlert reach its full potential.</p>
+                                    <p>We completed the 8-week UtrechtInc incubator program on June 19th, 2025. The program helped us validate our concept, refine our technology, and build key industry connections that are bringing CalvAlert closer to market launch.</p>
                                 </div>
                             </div>
                         </div>
@@ -684,7 +684,7 @@
                                 <div class="card-header">
                                     <div class="card-status">
                                         <span class="status-indicator active"></span>
-                                        <span class="status-text">Secured</span>
+                                        <span class="status-text">Grant Secured</span>
                                     </div>
                                     <h3>Initial Grant Funding</h3>
                                 </div>
@@ -707,13 +707,13 @@
                                                 </div>
                                                 <div class="milestone-details">
                                                     <h4>UU Playground Grant</h4>
-                                                    <p>Initial boost funding</p>
+                                                    <p>Seed funding - Q1 2025</p>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="grant-details-expanded">
-                                        <p>The UU Playground Grant has enabled us to accelerate the development of CalvAlert's core technology and begin our pilot testing program. This initial funding represents the first step in our journey to bring this revolutionary technology to farmers worldwide.</p>
+                                        <p>The €1,000 UU Playground Grant kick-started our development in early 2025, funding initial prototyping and market research. This seed funding helped us validate the technical feasibility of CalvAlert and establish our first pilot partnerships.</p>
                                         <a href="https://www.uu.nl/en/organisation/playground" target="_blank" class="grant-link">
                                             <span>Learn more about UU Playground</span>
                                             <i class="fas fa-external-link-alt"></i>
