updated pilot locations

--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -585,7 +585,7 @@
                             </div>
                             <div class="phase-content">
                                 <h4>Pilot Testing Underway</h4>
-                                <p>First pilot active in Cyprus with additional installations scheduled in the Netherlands to test across diverse farming environments.</p>
+                                <p>Active pilots running in both Cyprus and the Netherlands, testing CalvAlert across diverse farming environments and gathering real-world performance data.</p>
                             </div>
                         </div>
                         
