Contact form bug fix

--- a/calvalert/index.html
+++ b/calvalert/index.html
@@ -670,7 +670,7 @@
                     <p class="form-subtitle">Be the first to know about CalvAlert's progress and launches</p>
                 </div>
                 
-                <form class="calvalert-form" id="contactForm" action="https://formsubmit.co/info@withlency.com" method="POST">
+                <form class="calvalert-form" id="contactForm" action="https://formsubmit.co/info%40withlency.com" method="POST">
                     <!-- FormSubmit Configuration -->
                     <input type="text" name="_honey" style="display:none">
                     <input type="hidden" name="_captcha" value="false">
