--- a/calvalert/thanks.html
+++ b/calvalert/thanks.html
@@ -90,6 +90,7 @@
             position: relative;
             z-index: 1;
             padding: 2rem;
+            padding-top: 200px;
             animation: thanksFadeIn 0.8s ease-out;
         }
         
